Changing pages arrangement

--- a/AiTrainingBasic.html
+++ b/AiTrainingBasic.html
@@ -13,7 +13,7 @@
 <body>
     <p class="TitleHead">AI Training - Basic</p>  
 	
-    <!--- Basic Training - Vidoes -->
+    <!--- Basic Training - Videos -->
     <p class="TitleList1Blue">Basic Training - Videos</p>
 	<p>Note that sometimes adding the subtitles, or watching slower/faster helps.</p>
     <div class="video-container">
