--- a/AiTrainingCode.html
+++ b/AiTrainingCode.html
@@ -12,174 +12,9 @@
 
 <body>
     <p class="TitleHead">AI Training - Code</p>  
-
-    <!--- Code Training - Tools -->
-    <p class="TitleList1Blue">Code Training - Tools</p>
-    <ol>
-	    <li>
-		<p class="TitleList2Blue">Python</p>
-        <ol>
-            <li>
-			<p><a href="https://www.python.org/" target="_blank">Python installation</a></p>
-			<img src="images/Python path.png" alt="Python path" width="300" style="border: 2px solid black;">
-		    <p>Add path - if it is not there.</p>
-		    </li>
-            <li>Python Language
-	    	<p>You will need Python knowledge.
-			<br>The projects videos in the next section do teach the relevant Python (and you can use Google/YouTube/ChatGPT/Gemini for more details),
-			<br>but it you have no knowledge of Python, it might be easier to start with some online course.</p>
-    		</li>
-        </ol>
-        </li>
-
-        <li>
-		<p class="TitleList2Blue">Jupyter Notebook</p>
-        <ol>
-            <li>Jupyter installation
-			<p><img src="images/Jupyter installation.png" alt="Jupyter installation" width="400" style="border: 2px solid black;"></p>
-     		<p>pip install jupyter</p>
-			<p><img src="images/Jupyter notebook.png" alt="Jupyter notebook" width="400" style="border: 2px solid black;"></p>
-			</li>
-			<li>Run Jupyter notebook
-			<p><img src="images/New notebook.png" alt="New notebook" width="400" style="border: 2px solid black;"></p>
-			</li>
-		</ol>	
-		</li>
-		
-        <li>
-		<p class="TitleList2Blue">libraries</p>
-     	<ol>
-	    	<img src="images/Numpy.png" alt="Numpy" width="400" style="border: 2px solid black;">
-			<li><p>pip install numpy</p></li>
-			<li><p>pip install matplotlib</p></li>
-     		<p>Note - you will probably need to restart Jupyter (or whatever you are using).</p>
-		</ol>
-		</li>
-		
-        <li>
-		<p class="TitleList2Blue">Graphviz</p>
-		<ol>
-    		<li>
-		    <p>pip install graphviz</p>
-            <p>(in addition requires the installation below)</p>
-	    	</li>
-	    	<li>
-		    <p><a href="https://graphviz.org/download/" target="_blank">Graphviz installation</a><p>
-			<img src="images/Graphviz.png" alt="Graphviz" width="300" style="border: 2px solid black;">
-		    <p>Mark Add path...</p>
-		    </li>
-		</ol>
-		</li>
-		
-        <li>
-		<p class="TitleList2Blue">PyTorch</p>
-		<ol>
-    		<li>
-    		<a href="https://pytorch.org/get-started/locally/" target="_blank">PyTorch Site</a>
-			<p>pip3 install torch torchvision torchaudio</p>
-		    <p>The above is the command for runing on CPU. In case of Nvidia GPU get from the site the CUDA installation command.</p>
-			</li>
-    		<li>
-    		<a href="https://docs.pytorch.org/docs/stable/torch.html" target="_blank">PyTorch documentation</a>
-			<p>You can serach there for Torch commands and options.</p>
-			</li>
-		</ol>
-		</li>
-		
-        <li>
-		<p class="TitleList2Blue">Visual Studio Code</p>
-		<ol>
-		    <li>
-		    <a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code installation</a>
-			</li>
-		</ol>
-        </li>
-
-        <li>
-		<p class="TitleList2Blue">Git</p>
-		<ol>
-		    <li>
-		    <p><a href="https://www.youtube.com/watch?v=gbNFcuCGffk" target="_blank">Git and GitHub YouTube - installation and getting started video</a></p>
-            <div class="preview-container">
-	        <iframe width="300" height="170" src="https://www.youtube.com/embed/gbNFcuCGffk" frameborder="0" allowfullscreen></iframe>
-            </div>
-			</li>
-		
-		    <li>
-		    <a href="https://git-scm.com/" target="_blank">Git installation</a>
-			</li>
-		</ol>
-        </li>
-
-        <li>
-		<p class="TitleList2Blue">GitHub</p>
-		<ol>
-		    <li>
-		    <p><a href="https://github.com/" target="_blank">GitHub Site</a></p>
-			<img src="images/GitHubSign.png" alt="GitHubSign" width="300" style="border: 2px solid black;">
-			<p>Sign in.</p>
-			</li>
-		</ol>
-        </li>
-
-        <li>
-		<p class="TitleList2Blue">GitHub Copilot on Visual Studio Code</p>
-		<ol>
-		    <li>Set Copilot
-			<p><img src="images/VsGitHubCopilot.png" alt="VsGitHubCopilot" width="300" style="border: 2px solid black;"></p>
-			<p>Set Copilot Inside Visual Studio Code.</p>
-			</li>
-		</ol>
-        </li>
-
-        <li>
-		<p class="TitleList2Blue">Colab</p>
-		<ol>
-		    <li>
-		    <a href="https://colab.research.google.com/#scrollTo=Nma_JWh-W-IF" target="_blank">Colab Site</a>
-	        <p>Online - no installation.
-			<br>Run your code on online GPUs (much faster than local just CPU), 'Runtime-->Change runtime type'.
-			<br>Share your code.
-			<br>Open others code (like the code in the examples below).
-			<br>You can save a private copy of the code to your Google Drive: 'File-->Save a copy in Drive'.</p>
-			</li>
-		</ol>
-        </li>
-
-        <li>
-		<p class="TitleList2Blue">Optional - Notepad++</p>
-		<ol>
-		    <li>
-		    <a href="https://notepad-plus-plus.org/downloads/" target="_blank">Notepad++ installation</a>
-			</li>
-		</ol>
-        </li>
-
-        <li>
-		<p class="TitleList2Blue">Optional - Sublime text</p>
-		<ol>
-		    <li>
-		    <a href="https://notepad-plus-plus.org/downloads/" target="_blank">Sublime text installation</a>
-			</li>
-		</ol>
-        </li>
-		
-	    <li>
-		<p class="TitleList2Blue">Optional - Excalidraw</p>
-        <ol>
-            <li>
-			<a href="https://excalidraw.com/" target="_blank">Excalidraw installation</a>
-    		<p>Just an online draw board.</p>
-		    </li>
-        </ol>
-        </li>
-
-    </ol>
-
-<!----------------------------------------------------------------------------------------------->
-
-   <!--- Code Training - Projects -->
-	<p class="TitleList1Blue">Code Training - Projects</p>
+ 
+   <!--- Code Training - Basic Projects -->
+	<p class="TitleList1Blue">Code Training - Basic Projects</p>
     <ol>
 	    <li>
 		<p class="TitleList2Blue">Backpropagation - example code</p>
@@ -189,8 +24,8 @@
             <div class="preview-container">
 	        <iframe width="300" height="170" src="https://www.youtube.com/embed/VMj-3S1tku0" frameborder="0" allowfullscreen></iframe>
             </div>
- 	     	<p>Backpropagation example code.</p>
-			
+ 	     	<p>Backpropagation example code.
+        	<br>Requires Neural Networks knowledge (videos 1-4 in the  basic training).</p>
 		    </li>
             <li>
             <a href="https://github.com/karpathy/micrograd" target="_blank">GitHub: github.com/karpathy/micrograd</a>
@@ -238,7 +73,8 @@
             <div class="preview-container">
 	        <iframe width="300" height="170" src="https://www.youtube.com/embed/kCc8FmEb1nY" frameborder="0" allowfullscreen></iframe>
             </div>
- 	     	<p>GPT-1 character generation example code.</p>
+ 	     	<p>GPT-1 character generation example code.
+        	<br>Requires Transformer knowledge (videos 5-8 in the basic training).</p>
 		    </li>
 			
             <li>
@@ -255,6 +91,58 @@
 		
     </ol>
 
+<!----------------------------------------------------------------------------------------------->
+
+   <!--- Code Training - Advanced Projects -->
+    <p class="TitleList1Blue">Code Training - Advanced Projects</p>
+    <div class="video-container">
+    <ol>
+		<li>
+		<p class="TitleList2Blue">BatchNorm and optimization</p>
+		<ol>
+			<li>
+			<a href="https://www.youtube.com/watch?v=P6sfmUTpUmc" target="_blank">Building makemore Part 3: Activations & Gradients, BatchNorm (Andrej Karpathy)</a>
+            <div class="preview-container">
+	        <iframe width="300" height="170" src="https://www.youtube.com/embed/P6sfmUTpUmc" frameborder="0" allowfullscreen></iframe>
+            </div>
+ 	        <p>Part 3: BatchNorm and optimization - Character generation example code.
+ 	        <br>Note that we skip videos part 4 and part 5 - they are very optional.</p>
+		    </li>
+		</ol>
+		</li>
+
+		<li>
+		<p class="TitleList2Blue">Tokenizer</p>
+        <ol>
+			<li>
+		    <a href="https://www.youtube.com/watch?v=zduSFxRajkE" target="_blank">Let's build the GPT Tokenizer (Andrej Karpathy)</a>
+            <div class="preview-container">
+	        <iframe width="300" height="170" src="https://www.youtube.com/embed/zduSFxRajkE" frameborder="0" allowfullscreen></iframe>
+            </div>
+			</li>
+		</ol>
+		</li>
+
+	    <li>
+		<p class="TitleList2Blue">GPT-2 (some GPT-3) and GPU optimization</p>
+        <ol>
+            <li>
+			<p><a href="https://www.youtube.com/watch?v=l8pRSuU81PU" target="_blank">Let's reproduce GPT-2 (124M) (Andrej Karpathy)</a></p>
+            <div class="preview-container">
+	        <iframe width="300" height="170" src="https://www.youtube.com/embed/l8pRSuU81PU" frameborder="0" allowfullscreen></iframe>
+            </div>
+ 	     	<p>GPT-2 (some GPT-3) code and running with GPU optimization.</p>
+		    </li>
+
+	        <li>
+            <a href="https://github.com/karpathy/build-nanogpt" target="_blank">GitHub: github.com/karpathy/build-nanogpt</a>
+        	<p>GitHub of the above GPT-2 project.</p>
+            </li>
+        </ol>
+        </li>
+
+    </ol>
+	
 </body>
 </html>
 <!----------------------------------------------------------------------------------------------->
