--- a/AiTrainingFineTuning.html
+++ b/AiTrainingFineTuning.html
@@ -11,7 +11,7 @@
 <!----------------------------------------------------------------------------------------------->
 
 <body>
-    <p class="TitleHead">AI Training - Fine Tuning</p>  
+    <p class="TitleHead">AI Training - Fine Tuning and More</p>  
 
     <!--- Fine Tuning -->
     <p class="TitleList1Blue">Fine Tuning Training</p>
