--- a/AiTrainingModels.html
+++ b/AiTrainingModels.html
@@ -18,7 +18,7 @@
     <ol>
 
 		<li>
-	    <p class="TitleList2Blue">Historical Modles review</p>
+	    <p class="TitleList2Blue">Historical Models review</p>
         <ol>
 	    	<li>
     		<p><a href="https://www.youtube.com/watch?v=OFS90-FX6pg" target="_blank">The 35 Year History of ChatGPT (Art of the Problem)</a></p>
@@ -40,7 +40,7 @@
             <div class="iframe-wrapper">
             <iframe src="https://nanonets.com/webflow-bundles/feb23update/RAG_for_PDFs/build_v6/attention-is-all-you-need.pdf"></iframe>
             </div>
-    	    <p>The published Paper by Google for Transformer.</p>
+    	    <p>The published paper by Google for Transformer.</p>
             </li>
 
 			<li>
@@ -61,7 +61,7 @@
             <div class="iframe-wrapper">
             <iframe src="https://cdn.openai.com/research-covers/language-unsupervised/language_understanding_paper.pdf"></iframe>
             </div>
-    	    <p>The published Paper by OpenAI for GPT-1.</p>
+    	    <p>The published paper by OpenAI for GPT-1.</p>
             </li>
         </ol>
         </li>
@@ -74,7 +74,7 @@
             <div class="iframe-wrapper">
             <iframe src="https://cdn.openai.com/better-language-models/language_models_are_unsupervised_multitask_learners.pdf"></iframe>
             </div>
-        	<p>The published Paper by OpenAI for GPT-2.</p>
+        	<p>The published paper by OpenAI for GPT-2.</p>
             </li>
         </ol>
         </li>
@@ -87,7 +87,7 @@
             <div class="iframe-wrapper">
             <iframe src="https://arxiv.org/pdf/2005.14165"></iframe>
             </div>
-    	    <p>The published Paper by OpenAI for GPT-3.
+    	    <p>The published paper by OpenAI for GPT-3.
 			<br>Note that the paper includes lots of tests details that are not so important - and are covered in short in the video.</p>
             </li>
 
@@ -109,7 +109,7 @@
             <div class="iframe-wrapper">
             <iframe src="https://cdn.openai.com/papers/gpt-4.pdf"></iframe>
             </div>
-    	    <p>The published Paper by OpenAI for GPT-4.
+    	    <p>The published paper by OpenAI for GPT-4.
 			<br>Note that the paper includes lots of tests results which are not so important.
 			<br>Also note that the second part of the paper (starting on page 41 "GPT-4 System Card") is about safty issues.</p>
             </li>
@@ -132,7 +132,7 @@
             <div class="iframe-wrapper">
             <iframe src="https://arxiv.org/pdf/2501.12948"></iframe>
             </div>
-    	    <p>The published Paper by DeepSeek for DeepSeek-R1.</p>
+    	    <p>The published paper by DeepSeek for DeepSeek-R1.</p>
             </li>
 
 			<li>
@@ -158,7 +158,7 @@
             <div class="iframe-wrapper">
             <iframe src="https://arxiv.org/pdf/2302.13971"></iframe>
             </div>
-    	    <p>The published Paper by Meta AI for LLaMA 1.
+    	    <p>The published paper by Meta AI for LLaMA 1.
 			<br>Note that the paper includes lots of tests details that are not so important.</p>
 			</li>
 
@@ -175,44 +175,45 @@
             <div class="preview-container">
 	        <iframe width="300" height="170" src="https://www.youtube.com/embed/Mn_9W1nCFLo" frameborder="0" allowfullscreen></iframe>
             </div>
- 	     	<p>LLaMA 1 & 2 Technolgy basic explanation.</p>
+ 	     	<p>LLaMA 1 & 2 Technology basic explanation.</p>
 			</li>
         </ol>
 	    </li>
-
-
-
 
 	    <li>
 		<p class="TitleList2Blue">LLaMA 2</p>
         <ol>
-
-			
-
-           <li>
-paper 2
-			
+            <li>
+			<p><a href="https://arxiv.org/pdf/2307.09288" target="_blank">Llama 2: Open Foundation and Fine-Tuned Chat Models</a></p>
+            <div class="iframe-wrapper">
+            <iframe src="https://arxiv.org/pdf/2307.09288"></iframe>
+            </div>
+    	    <p>The published paper by Meta AI for LLaMA 2.
+			<br>Some parts require RLHF knowledge.</p>
 			</li>
-
-
-			<li>
-Paper 3?
-
-			</li>
-
-
-			<li>
-video - code llama, here or in code?
-
-
-			</li>
-
-
-
         </ol>
 	    </li>
 
-		
+
+
+	    <li>
+		<p class="TitleList2Blue">Llama 3</p>
+        <ol>
+
+			<li>
+
+
+
+				Paper 3?
+
+
+    	    <p>The published paper by Meta AI for Llama 3.
+			<br>Nothing much is new, but it has relatively detailed explanations of the model etc.</p>
+			</li>
+        </ol>
+	    </li>
+
+
 
 		
 		<li>
