--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
         <iframe src="AiTrainingBasic.html"></iframe>
         </div>
 		</li>
-		
+
+        <li>
+		<p><a href="AiTrainingDevTools.html" target="_blank">AI Training - Development Tools</a></p>
+        <div class="iframe-wrapper">
+        <iframe src="AiTrainingDevTools.html"></iframe>
+        </div>
+		</li>
+
         <li>
 		<p><a href="AiTrainingCode.html" target="_blank">AI Training - Code</a></p>
         <div class="iframe-wrapper">
@@ -38,16 +45,9 @@
 		</li>
 
         <li>
-		<p><a href="AiTrainingFineTuning.html" target="_blank">AI Training - Fine Tuning</a></p>
+		<p><a href="AiTrainingFineTuning.html" target="_blank">AI Training - Fine Tuning and More</a></p>
         <div class="iframe-wrapper">
         <iframe src="AiTrainingFineTuning.html"></iframe>
-        </div>
-		</li>
-
-        <li>
-		<p><a href="AiTrainingAdvancedCode.html" target="_blank">AI Training - Advanced Code</a></p>
-        <div class="iframe-wrapper">
-        <iframe src="AiTrainingAdvancedCode.html"></iframe>
         </div>
 		</li>
 
@@ -70,42 +70,37 @@
     <li>
     <p class="TitleList2Blue">W3</p>
     <ol>
-        <li>LLaMA 2 : llama 2 paper</li>
-        <li>LLaMA : llama 3 paper - maybe read a bit in general , and don't add even to list</li>
+        <li>LLaMA : llama 3 paper</li>
         <li>LLaMA 2  : code video Umar - maybe fast</li>
 
-        <li>.........</li>
+    </ol>
+    </li>
+    
+    <li>
+    <p class="TitleList2Blue">W4</p>
+    <ol>
 
-        <li>RLHF</li>
-        <li>PPO</li>
-        <li>RL</li>
-        <li>SFT</li>
-        <li>Fine Tuning</li>
         <li>DPO</li>
-        <li>.........</li>
         <li>RAG</il> 
         <li>Plugin</il> 
         <li>.........</li>
         <li>Desktop screenshots</li>
         <li>Bookmarks</li>
 
-    </ol>
-    </li>
-    
-    <li>
-    <p class="TitleList2Blue">W3</p>
-    <ol>
+
         <li>AGI</li>
         <li>New Think o3 o4 models</li>
-        <li>Newist models</li>
+        <li>Newest models</li>
         <li>Karpathy video last</li>
+        <li>Karpathy video before last + interview</li>
         <li>More subjects</li> 
+        <li>merge code and code advanced? make new for advanced general?</li> 
 
     </ol>
     </li>
 
     <li>
-    <p class="TitleList2Blue">W4</p>
+    <p class="TitleList2Blue">W5</p>
     <ol>
         <li>General news</li>
         <li>Altman, Zokerberg, Musk</li>
@@ -115,7 +110,7 @@
     </li>
 
     <li>
-    <p class="TitleList2Blue">W5</p>
+    <p class="TitleList2Blue">W6</p>
     <ol>
         <li>Choose subject</li>
         <li>My Project - build from others</li>
