--- a/AiTrainingModels.html
+++ b/AiTrainingModels.html
@@ -158,7 +158,7 @@
             <div class="iframe-wrapper">
             <iframe src="https://arxiv.org/pdf/2302.13971"></iframe>
             </div>
-    	    <p>The published paper by Meta AI for LLaMA 1.
+    	    <p>The published paper by Meta for LLaMA 1.
 			<br>Note that the paper includes lots of tests details that are not so important.</p>
 			</li>
 
@@ -188,33 +188,25 @@
             <div class="iframe-wrapper">
             <iframe src="https://arxiv.org/pdf/2307.09288"></iframe>
             </div>
-    	    <p>The published paper by Meta AI for LLaMA 2.
+    	    <p>The published paper by Meta for LLaMA 2.
 			<br>Some parts require RLHF knowledge.</p>
 			</li>
         </ol>
 	    </li>
-
-
-
+		
 	    <li>
 		<p class="TitleList2Blue">Llama 3</p>
         <ol>
-
 			<li>
-
-
-
-				Paper 3?
-
-
-    	    <p>The published paper by Meta AI for Llama 3.
-			<br>Nothing much is new, but it has relatively detailed explanations of the model etc.</p>
+			<p><a href="https://arxiv.org/pdf/2407.21783" target="_blank">The Llama 3 Herd of Models</a></p>
+            <div class="iframe-wrapper">
+            <iframe src="https://arxiv.org/pdf/2407.21783"></iframe>
+            </div>
+    	    <p>The published paper by Meta for Llama 3.
+			<br>Good detailed explanations of the model and training (nothing much new in the mode, besides DPO, but gives lots of details).</p>
 			</li>
         </ol>
 	    </li>
-
-
-
 		
 		<li>
 		<p class="TitleList2Blue">BERT</p>
@@ -239,7 +231,6 @@
 		</li>
 
     </ol>
- 	
 
 </body>
 </html>
