Adding LLaMA 2 code

--- a/AiTrainingCode.html
+++ b/AiTrainingCode.html
@@ -141,6 +141,19 @@
         </ol>
         </li>
 
+		<li>
+		<p class="TitleList2Blue">LLaMA 2</p>
+        <ol>
+			<li>
+		    <a href="https://www.youtube.com/watch?v=oM4VmoabDAI" target="_blank">Coding LLaMA 2 from scratch in PyTorch - KV Cache, Grouped Query Attention, Rotary PE, RMSNorm (Umar Jamil)</a>
+            <div class="preview-container">
+	        <iframe width="300" height="170" src="https://www.youtube.com/embed/oM4VmoabDAI" frameborder="0" allowfullscreen></iframe>
+            </div>
+ 	     	<p>LLaMA 2 inference code writing.</p>
+			</li>
+		</ol>
+		</li>
+
     </ol>
 	
 </body>
