--- a/AiTrainingPostTraining.html
+++ b/AiTrainingPostTraining.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Training - Fine Tuning</title>
+    <title>AI Training - Post Training</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css"> 
 </head>
@@ -11,7 +11,7 @@
 <!----------------------------------------------------------------------------------------------->
 
 <body>
-    <p class="TitleHead">AI Training - Fine Tuning and More</p>  
+    <p class="TitleHead">AI Training - Post Training and More</p>  
 
     <!--- Fine Tuning -->
     <p class="TitleList1Blue">Fine Tuning Training</p>
@@ -24,6 +24,7 @@
   	    	<img src="images/RLHF1.png" alt="Numpy" width="600" style="border: 2px solid black;">
   	    	<br><img src="images/RLHF2.png" alt="Numpy" width="600" style="border: 2px solid black;">
   	    	<br><img src="images/RLHF3.png" alt="Numpy" width="600" style="border: 2px solid black;">
+   	    	<p>A not so organized summary I wrote to myself - not from a specific video, but papers and Internet.</p>
 		</ol>
 		</li>
 
