--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <p class="TitleHead">AI Training</p>  
 
-   <!--- Basic Training - Web Sites -->
-    <p class="TitleList1Blue">Basic Training - Web Sites</p>
+   <!--- AI Training - Subjects -->
+    <p class="TitleList1Blue">AI Training - Subjects</p>
     <ol>
         <li>
 		<p><a href="AiTrainingBasic.html" target="_blank">AI Training - Basic</a></p>
@@ -45,9 +45,9 @@
 		</li>
 
         <li>
-		<p><a href="AiTrainingFineTuning.html" target="_blank">AI Training - Fine Tuning and More</a></p>
+		<p><a href="AiTrainingPostTraining.html" target="_blank">AI Training - Post Training and More</a></p>
         <div class="iframe-wrapper">
-        <iframe src="AiTrainingFineTuning.html"></iframe>
+        <iframe src="AiTrainingPostTraining.html"></iframe>
         </div>
 		</li>
 
@@ -66,19 +66,10 @@
 	
 <p class="TitleList1Blue">Remarks</p>
 <ol>
-
-    <li>
-    <p class="TitleList2Blue">W3</p>
-    <ol>
-        <li>LLaMA 2  : code video Umar - maybe fast</li>
-
-    </ol>
-    </li>
-    
+   
     <li>
     <p class="TitleList2Blue">W4</p>
     <ol>
-
         <li>DPO</li>
         <li>RAG</il> 
         <li>Plugin</il> 
@@ -101,10 +92,11 @@
     <ol>
         <li>General news</li>
         <li>Altman, Zokerberg, Musk</li>
-        <li>More subjects</li> 
         <li>.........</li>
         <li>Market</li>
         <li>Ventures</li>
+        <li>.........</li>
+        <li>More subjects</li> 
     </ol>
     </li>
 
