--- a/AiTrainingPostTraining.html
+++ b/AiTrainingPostTraining.html
@@ -15,21 +15,64 @@
 
     <!--- Fine Tuning -->
     <p class="TitleList1Blue">Fine Tuning Training</p>
-    <div class="video-container">
-    <ol>
 
+    <ol>
         <li>
-		<p class="TitleList2Blue">RLHF basics summary</p>
+		<p class="TitleList2Blue">RLHF (and PPO) basics summary</p>
      	<ol>
+        <p>SFT - an important subject, but it doesn't appear in here, it was covered along the way as part of other videos/papers.
+        <br>RLHF - was covered partially in other videos/papers, I didn't find a good video, so I just put here my notes for it.</p>
   	    	<img src="images/RLHF1.png" alt="Numpy" width="600" style="border: 2px solid black;">
   	    	<br><img src="images/RLHF2.png" alt="Numpy" width="600" style="border: 2px solid black;">
   	    	<br><img src="images/RLHF3.png" alt="Numpy" width="600" style="border: 2px solid black;">
-   	    	<p>A not so organized summary I wrote to myself - not from a specific video, but papers and Internet.</p>
 		</ol>
 		</li>
 
+        <li>
+		<p class="TitleList2Blue">DPO basics summary</p>
+     	<ol>
+ 	     	<p>DPO - I just put here my (real partially) notes for it.</p>
+  	    	<img src="images/DPO.png" alt="Numpy" width="600" style="border: 2px solid black;">
+		</ol>
+		</li>
     </ol>
-    </div>
-   
+
+ <!----------------------------------------------------------------------------------------------->
+
+   <!--- Inference Training-->
+    <p class="TitleList1Blue">Inference Training</p>
+    <ol>
+        <li>
+		<p class="TitleList2Blue">RAG</p>
+        <ol>
+ 			<li>
+			<p><a href="https://www.youtube.com/watch?v=zYGDpG-pTho" target="_blank">RAG vs Fine-Tuning vs Prompt Engineering: Optimizing AI Models (IBM Technology)</a></p>
+            <div class="preview-container">
+	        <iframe width="300" height="170" src="https://www.youtube.com/embed/zYGDpG-pTho" frameborder="0" allowfullscreen></iframe>
+            </div>
+ 	     	<p>RAG very very basic explanation.</p>
+		    </li>
+
+ 			<li>
+			<p><a href="https://www.youtube.com/watch?v=rhZgXNdhWDY" target="_blank">Retrieval Augmented Generation (RAG) Explained: Embedding, Sentence BERT, Vector Database (HNSW) (Umar Jamil)</a></p>
+            <div class="preview-container">
+	        <iframe width="300" height="170" src="https://www.youtube.com/embed/rhZgXNdhWDY" frameborder="0" allowfullscreen></iframe>
+            </div>
+ 	     	<p>RAG explanation.</p>
+		    </li>
+        </ol>
+		</li>
+    </ol>
+
+ <!----------------------------------------------------------------------------------------------->
+
+   <!--- More -->
+    <p class="TitleList1Blue">More</p>
+    <ol>
+
+
+
+    </ol>
+
 </body>
 </html>
