--- a/index.html
+++ b/index.html
@@ -68,27 +68,29 @@
 <ol>
    
     <li>
-    <p class="TitleList2Blue">W4</p>
+    <p class="TitleList2Blue">W5</p>
     <ol>
-        <li>DPO</li>
-        <li>RAG</il> 
-        <li>Plugin</il> 
+        <li>pre last Karphati videos</li>
+        <li>last Karphati videos</li>
+        <li>new blue brown video</li>
+        <li>GPT5 paper</li>
         <li>.........</li>
+
         <li>Desktop screenshots</li>
         <li>Bookmarks</li>
 
-
+        <li>Plugin</il> 
         <li>AGI</li>
         <li>New Think o3 o4 models</li>
         <li>Newest models</li>
-        <li>Karpathy video last</li>
-        <li>Karpathy video before last + interview</li>
+        <li>Karpathy video interview</li>
+        <li>More like Karpathy video interview</li>
 
     </ol>
     </li>
 
     <li>
-    <p class="TitleList2Blue">W5</p>
+    <p class="TitleList2Blue">W6</p>
     <ol>
         <li>General news</li>
         <li>Altman, Zokerberg, Musk</li>
@@ -101,10 +103,10 @@
     </li>
 
     <li>
-    <p class="TitleList2Blue">W6</p>
+    <p class="TitleList2Blue">W7</p>
     <ol>
         <li>Choose subject</li>
-        <li>My Project - build from others</li>
+        <li>Build my others</li>
     </ol>
 </ol>
 
