--- a/AiTrainingBasic.html
+++ b/AiTrainingBasic.html
@@ -84,11 +84,11 @@
 		</li>
 		
         <li>
-		<p><a href="https://lmarena.ai/leaderboard" target="_blank">Chatbot Arena</a></p>
+		<p><a href="https://lmarena.ai/leaderboard" target="_blank">LMArena AI</a></p>
         <div class="iframe-wrapper">
         <iframe src="https://lmarena.ai/leaderboard"></iframe>
         </div>
-		<p>Comparing LLM models by users, Leaderboard tab shows the current ranking.</p>
+		<p>Comparing LLM models by users voting, Leaderboard tab shows the current ranking.</p>
 		</li>
 
         <li>
@@ -102,4 +102,3 @@
 
 </body>
 </html>
-<!----------------------------------------------------------------------------------------------->
