--- a/AiTrainingPostTraining.html
+++ b/AiTrainingPostTraining.html
@@ -11,11 +11,10 @@
 <!----------------------------------------------------------------------------------------------->
 
 <body>
-    <p class="TitleHead">AI Training - Post Training and More</p>  
+    <p class="TitleHead">AI Training - Post Training</p>  
 
     <!--- Fine Tuning -->
     <p class="TitleList1Blue">Fine Tuning Training</p>
-
     <ol>
         <li>
 		<p class="TitleList2Blue">RLHF (and PPO) basics summary</p>
@@ -62,16 +61,6 @@
 		    </li>
         </ol>
 		</li>
-    </ol>
-
- <!----------------------------------------------------------------------------------------------->
-
-   <!--- More -->
-    <p class="TitleList1Blue">More</p>
-    <ol>
-
-
-
     </ol>
 
 </body>
