--- a/index.html
+++ b/index.html
@@ -45,9 +45,16 @@
 		</li>
 
         <li>
-		<p><a href="AiTrainingPostTraining.html" target="_blank">AI Training - Post Training and More</a></p>
+		<p><a href="AiTrainingPostTraining.html" target="_blank">AI Training - Post Training</a></p>
         <div class="iframe-wrapper">
         <iframe src="AiTrainingPostTraining.html"></iframe>
+        </div>
+		</li>
+
+        <li>
+		<p><a href="AiTrainingMore.html" target="_blank">AI Training - More</a></p>
+        <div class="iframe-wrapper">
+        <iframe src="AiTrainingMore.html"></iframe>
         </div>
 		</li>
 
@@ -68,12 +75,11 @@
 <ol>
    
     <li>
-    <p class="TitleList2Blue">W5</p>
+    <p class="TitleList2Blue">W6</p>
     <ol>
-        <li>pre last Karphati videos</li>
-        <li>last Karphati videos</li>
         <li>new blue brown video</li>
         <li>GPT5 paper</li>
+        <li>last Karphati videos</li>
         <li>.........</li>
 
         <li>Desktop screenshots</li>
@@ -85,13 +91,8 @@
         <li>Newest models</li>
         <li>Karpathy video interview</li>
         <li>More like Karpathy video interview</li>
-
-    </ol>
-    </li>
-
-    <li>
-    <p class="TitleList2Blue">W6</p>
-    <ol>
+        <li>.........</li>
+        <li>.........</li>
         <li>General news</li>
         <li>Altman, Zokerberg, Musk</li>
         <li>.........</li>
@@ -99,6 +100,7 @@
         <li>Ventures</li>
         <li>.........</li>
         <li>More subjects</li> 
+
     </ol>
     </li>
 
