--- a/AiTrainingMore.html
+++ b/AiTrainingMore.html
@@ -30,6 +30,18 @@
 		</li>
 
         <li>
+		<p class="TitleList2Blue">Using LLMs</p>
+        <ol>
+ 			<li>
+			<p><a href="https://www.youtube.com/watch?v=EWvNQjAaOHw" target="_blank">How I use LLMs (Andrej Karpathy)</a></p>
+            <div class="preview-container">
+	        <iframe width="300" height="170" src="https://www.youtube.com/embed/EWvNQjAaOHw" frameborder="0" allowfullscreen></iframe>
+            </div>
+	        </li>
+		</ol>
+		</li>
+
+        <li>
 		<p class="TitleList2Blue">Llama 4</p>
         <ol>
  			<li>
@@ -154,6 +166,18 @@
         </ol>
 		</li>
 
+        <li>
+		<p class="TitleList2Blue">Scale Seal</p>
+        <ol>
+    		<li>
+	     	<p><a href="https://scale.com/leaderboard" target="_blank">Scale Seal leaderboards</a></p>
+            <div class="iframe-wrapper">
+            <iframe src="https://scale.com/leaderboard"></iframe>
+            </div>
+		    <p>LLM models ranking (similar to LMArena).</p>
+		    </li>
+        </ol>
+		</li>
 
 
     </ol>
