Adding Platform sites

--- a/AiTrainingMore.html
+++ b/AiTrainingMore.html
@@ -75,7 +75,76 @@
 		</ol>
 		</li>
 
+        <li>
+		<p class="TitleList2Blue">vLLM</p>
+        <ol>
+ 			<li>
+			<p><a href="https://www.youtube.com/watch?v=McLdlg5Gc9s" target="_blank">What is vLLM? Efficient AI Inference for Large Language Models (IBM Technology)</a></p>
+            <div class="preview-container">
+	        <iframe width="300" height="170" src="https://www.youtube.com/embed/McLdlg5Gc9s" frameborder="0" allowfullscreen></iframe>
+            </div>
+	        </li>
+		</ol>
+		</li>
 
+    </ol>
+
+<!----------------------------------------------------------------------------------------------->
+
+    <!--- More Developers platforms -->
+    <p class="TitleList1Blue">More Developers platforms</p>
+    <ol>
+        <li>
+		<p class="TitleList2Blue">OpenAI API Platform</p>
+        <ol>
+ 			<li>
+	    	<p><a href="https://platform.openai.com/docs/overview" target="_blank">OpenAI developer platform</a></p>
+        	<img src="images/OpenaiPlatform.png" alt="Numpy" width="300" style="border: 2px solid black;">
+		    <p>OpenAI full platform, with all the APIs, tools, specialized models, models optimization and more.</p>
+	        </li>
+        </ol>
+		</li>
+
+        <li>
+		<p class="TitleList2Blue">OpenAI Agent SDK</p>
+        <ol>
+ 			<li>
+	    	<p><a href="https://openai.github.io/openai-agents-python/" target="_blank">OpenAI Agents SDK</a></p>
+            <div class="preview-container">
+	        <iframe width="300" height="170" src="https://openai.github.io/openai-agents-python/" frameborder="0" allowfullscreen></iframe>
+            </div>
+		    <p>OpenAI specific for writing Agents.</p>
+	        </li>
+
+			<li>
+			<p><a href="https://www.youtube.com/watch?v=gFcAfU3V1Zo" target="_blank">OpenAI Agents SDK Tutorial (FULL SERIES) (Kody Simpson)</a></p>
+            <div class="preview-container">
+	        <iframe width="300" height="170" src="https://www.youtube.com/embed/gFcAfU3V1Zo" frameborder="0" allowfullscreen></iframe>
+            </div>
+		    <p>OpenAI SDK tutorial (this video I actually watched just partially, to get the basic understanding of OpenAI SDK - but if you go into Agents it looks good).</p>
+	        </li>
+        </ol>
+		</li>
+
+        <li>
+		<p class="TitleList2Blue">Google Vertex AI Platform</p>
+        <ol>
+ 			<li>
+	    	<p><a href="https://cloud.google.com/vertex-ai" target="_blank">Vertex AI Platform</a></p>
+        	<img src="images/VertexAI.png" alt="Numpy" width="300" style="border: 2px solid black;">
+	        </li>
+        </ol>
+		</li>
+
+        <li>
+		<p class="TitleList2Blue">Meta Llama developers center</p>
+        <ol>
+ 			<li>
+	    	<p><a href="https://developers.meta.com/ai/" target="_blank">Meta Llama for developers</a></p>
+        	<img src="images/MetaDev.png" alt="Numpy" width="300" style="border: 2px solid black;">
+	        </li>
+        </ol>
+		</li>
     </ol>
 
 <!----------------------------------------------------------------------------------------------->
