--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
         <li>Choose subject</li>
         <li>Build my project</li>
 
+        <li>.........</li>
+        <li>Enterprise</li>
+        <li>Fine Tuning</li>
+        <li>Rank</li>
+        <li>Agent of agents</li>
+        <li>BERT special models</li>
+
     </ol>
     </li>
 
