--- a/AiTrainingRunning.html
+++ b/AiTrainingRunning.html
@@ -23,14 +23,21 @@
 			<p><a href="https://www.youtube.com/watch?v=1xdneyn6zjw" target="_blank">Run New Llama 3.1 on Your Computer Privately in 10 minutes (Skill Leap AI)</a></p>
             <div class="preview-container">
 	        <iframe width="300" height="170" src="https://www.youtube.com/embed/1xdneyn6zjw" frameborder="0" allowfullscreen></iframe>
+            </div>
  	     	<p>Run inference from the terminal or from the Ollama chat.
             <br>Note - the new Ollama installation also installs Ollama Chat, so you don't need to install Docker and so - view the video upto 8:35 only,
             <br> (unless you want to upload files to the model)</p>
         	<p>If you try a bigger model like 40B you get:</p>
    			<img src="images/OllamaCPU40B.png" alt="Python path" width="600" style="border: 2px solid black;">
-   	     	<p>You can remove it from the terminal by "ollama list" and then "ollama rm modelName". </p>
-            </div>
+        	<p>When I tried a 24B model on a CPU with 16G RAM I get a lot of Disk usage (I believe swap files):</p>
+   			<img src="images/OllamaMistral24B.png" alt="Python path" width="600" style="border: 2px solid black;">
+   	     	<p>You can remove models from the terminal by "ollama list" and then "ollama rm modelName". </p>
  		    </li>
+
+
+
+
+
 
  			<li>
      		<p><a href="https://ollama.com/" target="_blank">Ollama</a></p>
@@ -41,7 +48,7 @@
 
 
 
-https://www.docker.com/
+
 
 
         <li>
