--- a/AiTrainingGoodExcel.html
+++ b/AiTrainingGoodExcel.html
@@ -78,6 +78,26 @@
 		</ol>
 		</li>
 
+        <li>
+		<p class="TitleList2Blue">Python run from a file</p>
+     	<ol>
+ 			<li>Run python
+	    	<p><img src="images/ExcelFirstRunning.png" alt="Numpy" width="400" style="border: 2px solid black;"></p>
+			</li>
+		</ol>
+		</li>
+
+        <li>
+		<p class="TitleList2Blue">Keep Excel open</p>
+     	<ol>
+ 			<li>Pip
+	    	<p><img src="images/ExcelPipXlwings.png" alt="Numpy" width="400" style="border: 2px solid black;"></p>
+			<p>pip install xlwings</p>
+     		<p>A different library is needed.</p>
+		</li>
+		</ol>
+		</li>
+
 
 
 
